<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/space_xxxlarge"
        android:layout_marginBottom="-1dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_tooltip_arrow" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_popup_window"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_small"
            android:paddingEnd="@dimen/space_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_normal"
                android:layout_marginBottom="@dimen/space_small"
                android:text="@string/room_measurement"
                android:textColor="@color/orange_dark"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_xsmall"
                android:text="@string/msg_room_measurement_description"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:drawableStart="@drawable/ic_start_measure_small"
                android:drawablePadding="@dimen/space_small"
                android:gravity="center_vertical"
                android:text="@string/msg_start_measure_help"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:drawableStart="@drawable/ic_stop_measure_small"
                android:drawablePadding="@dimen/space_small"
                android:gravity="center_vertical"
                android:text="@string/msg_stop_measure_help"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:drawableStart="@drawable/ic_undo_small"
                android:drawablePadding="@dimen/space_small"
                android:gravity="center_vertical"
                android:text="@string/msg_undo_help"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:drawableStart="@drawable/ic_clear_small"
                android:drawablePadding="@dimen/space_small"
                android:gravity="center_vertical"
                android:text="@string/msg_clear_all_help"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:drawableStart="@drawable/ic_help_small"
                android:drawablePadding="@dimen/space_small"
                android:gravity="center_vertical"
                android:text="@string/msg_help_button_help"
                android:textColor="@color/always_white"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_small"
                android:layout_marginBottom="@dimen/space_xsmall"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_dont_show_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/space_xxsmall"
                    android:buttonTint="@color/orange_dark"
                    android:paddingStart="@dimen/space_xxsmall"
                    android:paddingEnd="@dimen/space_xxsmall"
                    android:text="@string/dont_show_this_again"
                    android:textColor="@color/always_white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_got_it"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/space_xsmall"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginBottom="@dimen/space_xsmall"
                    android:paddingTop="@dimen/space_xsmall"
                    android:paddingBottom="@dimen/space_xsmall"
                    android:text="@string/ok_got_it"
                    android:textColor="@color/orange_dark"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>